{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 11,
  "lineage": "9873d49a-fbad-ebe5-600d-b13279ebd4cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraformserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b09627181c8d5778",
            "arn": "arn:aws:ec2:ap-south-1:276042748566:instance/i-0f5cc0e2baf834e2d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f5cc0e2baf834e2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aditya1212",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04c62643b4f028b3d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c62643b4f028b3d",
            "private_dns": "ip-40-0-1-50.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "40.0.1.50",
            "public_ip": "13.234.20.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01dfd44e702e785fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08620b799b6731cdd",
            "tags": {
              "Name": "terraformendtoend"
            },
            "tags_all": {
              "Name": "terraformendtoend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0accc264c59e4649c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.test",
            "aws_security_group.terraform-sg",
            "aws_subnet.subnet1",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:internet-gateway/igw-047c02edaca29b1fb",
            "id": "igw-047c02edaca29b1fb",
            "owner_id": "276042748566",
            "vpc_id": "vpc-03c51162f40aa7c7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:network-interface/eni-04c62643b4f028b3d",
            "id": "eni-04c62643b4f028b3d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:4e:dc:aa:f2:01",
            "owner_id": "276042748566",
            "private_ip": "40.0.1.50",
            "private_ip_list": [
              "40.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "40.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0accc264c59e4649c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08620b799b6731cdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.terraform-sg",
            "aws_subnet.subnet1",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:route-table/rtb-0b107d1d53a7db43d",
            "id": "rtb-0b107d1d53a7db43d",
            "owner_id": "276042748566",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047c02edaca29b1fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicrttableterraform"
            },
            "tags_all": {
              "Name": "publicrttableterraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c51162f40aa7c7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9c079fd7067281",
            "route_table_id": "rtb-0b107d1d53a7db43d",
            "subnet_id": "subnet-08620b799b6731cdd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet1",
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:security-group/sg-0accc264c59e4649c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0accc264c59e4649c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "276042748566",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allowhttpsssh"
            },
            "tags_all": {
              "Name": "allowhttpsssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c51162f40aa7c7c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:subnet/subnet-08620b799b6731cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "40.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08620b799b6731cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "276042748566",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            },
            "vpc_id": "vpc-03c51162f40aa7c7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.myfirstvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myfirstvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:276042748566:vpc/vpc-03c51162f40aa7c7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "40.0.0.0/16",
            "default_network_acl_id": "acl-0a816a35905597e5b",
            "default_route_table_id": "rtb-0861d42ad2137c9d8",
            "default_security_group_id": "sg-0b21edf96ab4218b0",
            "dhcp_options_id": "dopt-02aa33b62353b3e49",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c51162f40aa7c7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0861d42ad2137c9d8",
            "owner_id": "276042748566",
            "tags": {
              "Name": "production"
            },
            "tags_all": {
              "Name": "production"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}